# RulesPilot

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
NLP Interpreter/app/: main.py
NLP Interpreter/app/models/: rule.py
NLP Interpreter/app/services/: acm_client.py  interpreter.py
NLP Interpreter/tests/: test_interpreter.py
NLPInterpreter/: .env.example  list_models.py  pyproject.toml  test_anthropic.py  test_gemini.py
NLPInterpreter/app/: config.py  main.py
NLPInterpreter/app/models/: rule.py
NLPInterpreter/app/routers/: interpret.py
NLPInterpreter/app/services/: acm_client.py  interpreter.py  transcriber.py
app/: config.py
app/routers/: interpret.py
nac-mcp-server/: .gitignore  README.md  pyproject.toml
nac-mcp-server/src/nac_mcp/: client.py  server.py  types.py
nac-mcp-server/src/nac_mcp/tools/: csv_tools.py  meta.py  rules.py  settings.py
ui/: index.html  package.json  vite.config.ts
ui/src/: App.css  App.tsx  config.ts
ui/src/components/: Header.tsx  ResultPanel.tsx  RuleForm.tsx
