[project]
name = "nac-mcp-server"
version = "0.1.0"
description = "MCP server for NAC App Control GraphQL API"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
nac-mcp-server = "nac_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nac_mcp"]

[dependency-groups]
dev = []
